<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/name_text_tv"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />

        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/widget_border"
            android:textColor="@color/black"
            android:hint="@string/input_name_text"
            android:textAlignment="center" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/weight_text_tv"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"/>

        <EditText
            android:id="@+id/weightET"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/widget_border"
            android:textColor="@color/black"
            android:hint="@string/input_weight_text"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/price_text_tv"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"/>

        <EditText
            android:id="@+id/priceET"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/widget_border"
            android:textColor="@color/black"
            android:hint="@string/input_price"
            android:inputType="numberDecimal"
            android:textAlignment="center"/>


    </LinearLayout>

</LinearLayout>