<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/itemPad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="2dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/id_text"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_margin="2dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/idItemTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:hint="@string/id_output_text"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:gravity="end"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_text"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_margin="2dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/nameItemTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:hint="@string/name_output_taxt"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:gravity="end"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight_text"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_margin="2dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/weightItemTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:hint="@string/weight_output_text"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:gravity="end"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/kg_taxt"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:gravity="end"/>


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_text"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_margin="2dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/priceItemTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:hint="@string/price_output_text"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:gravity="end"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/rub_text"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:gravity="end"/>

                </TableRow>

              </LinearLayout>


    </RelativeLayout>

</LinearLayout>