<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="2dp">

        <TableRow
            android:id="@+id/inputIdTR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/update_id_text_tv"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="2" />

            <EditText
                android:id="@+id/updateIdItemET"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/widget_border"
                android:textColor="@color/black"
                android:hint="@string/update_product_id_text"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/update_name_text"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="2" />

            <EditText
                android:id="@+id/updateNameET"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/widget_border"
                android:textColor="@color/black"
                android:hint="@string/input_update_name_text"
                android:textAlignment="center"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/update_weight_text"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="2" />

            <EditText
                android:id="@+id/updateWeightET"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/widget_border"
                android:textColor="@color/black"
                android:inputType="numberDecimal"
                android:hint="@string/update_input_weight_text"
                android:textAlignment="center"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/update_price_text"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="2" />

            <EditText
                android:id="@+id/updatePriceET"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/widget_border"
                android:textColor="@color/black"
                android:hint="@string/update_input_price_text"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_weight="1" />

        </TableRow>

    </LinearLayout>

</LinearLayout>